[package]
name = "collector"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["fs", "trace"] }

# Templates
askama = "0.12"
askama_axum = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ID generation
nanoid = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Random (for deck shuffling)
rand = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
once_cell = "1.19"

# Async utilities
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
